# ipfire-2.x

./: .cvsignore  .gitignore  .mailmap  .svnignore  README.md  make.sh  singleMake.sh
config/CVS/: Entries  Repository
config/aboot/: aboot.conf  scsiaboot.conf
config/acpid/: power  power.sh
config/amavisd/: amavisd.conf
config/apcupsd/: apcupsd  changeme  commfailure  commok  offbattery  onbattery
config/asterisk/: addons.makeopts  asterisk.logrotate  asterisk.makeopts  zaptel.makeopts
config/avahi/: avahi  avahi-daemon.conf  smb.service
config/backup/: backup.pl  exclude  include
config/bash/: dot_bash_logout  dot_bashrc
config/bind/: trusted-key.key
config/ca-certificates/: build.sh  certdata.txt  ipfire-ca.crt
config/cacti/: cacti.conf  cacti.cron  cacti.logrotate
config/calamaris/: mkreport
config/cdrom/: README.txt  grub-efi.cfg  grub.cfg
config/cfgroot/: advoptions-list  aws-functions.pl  backup-exclude  backup-exclude.hardware  backup-include  cacert.asc  connscheduler-lib.pl  connscheduler.conf  countries.pl  defaultservices  ethernet-vlans  general-functions.pl  geoip-functions.pl  graphs.pl  header-menu.pl  header.pl  http-client-functions.pl  icmptypes  ids-functions.pl  ipblocklist-functions.pl  ipcop.gpg  ipfire.gpg  lang.pl  location-functions.pl  logging-settings  main-settings  manualpages  mbmon-settings  modem-defaults  modem-lib.pl  monitorTraffic.pl  net-traffic-admin.pl  net-traffic-lib.pl  network-functions.pl  nfs-server  oinkmaster.conf  p2protocols  protocols.pl  proxy-acl  ssh-settings  (+4 more)
config/clamav/: clamd.conf  freshclam.conf
config/client175/: site.conf
config/collectd/: collectd.conf  collectd.custom  collectd.precache  collectd.thermal  collectd.vpn
config/coova-chilli/: config  settings  uam.pl
config/cron/: crontab
config/cups/: cupsd.conf
config/cyrus-imapd/: imapd.conf
config/cyrus-sasl/: smtpd.conf
config/cyrusimap/: cyrus.conf  imapd.conf
config/dehydrated/: cron.sh
config/dhcpc/: dhcpcd.conf
config/dma/: dma-cleanup-spool
config/dracut/: dracut.conf  ipfire.conf
config/elinks/: elinks.conf
config/etc/: aliases  bashrc  certparams  e2fsck.conf  fstab  group  hddtemp.db  host.conf  inittab  inputrc  ipsec.user.conf  ipsec.user.secrets  ld.so.conf  logrotate.conf  mime.types  modules.conf  nsswitch.conf  passwd  profile  securetty  sysctl-armv5tel.conf  sysctl-x86_64.conf  sysctl.conf  syslog.conf
config/etc-i586/: motd
config/etc-x86_64/: sysctl-x86_64.conf
config/extrahd/: extrahd.pl
config/findutils/: updatedb
config/firewall/: config  convert-dmz  convert-outgoingfw  convert-portfw  convert-xtaccess  firewall-lib.pl  firewall-policy  geoipblock  ipsec-block  ipsec-policy  locationblock  p2protocols  rules.pl
config/forwardfw/: convert-dmz  convert-outgoingfw  convert-portfw  convert-xtaccess  firewall-forward-policy  firewall-lib.pl  firewall-policy  p2protocols  rules.pl
config/freeradius/: logrotate
config/fstrim/: trim
config/fwhosts/: customservices  icmp-types
config/gnump3d/: gnump3d.conf
config/grub/: grub.conf  message  scsigrub.conf
config/grub2/: 00_cloud  default
config/guardian/: guardian.conf  guardian.de.pl  guardian.en.pl  guardian.es.pl  guardian.fr.pl  guardian.it.pl  guardian.logrotate  guardian.nl.pl  guardian.pl  guardian.pl.pl  guardian.ru.pl  guardian.tr.pl  guardian_block.sh  guardian_unblock.sh
config/haproxy/: haproxy.cfg  logrotate
doc/: .svnignore  CONTRIBUTING.md  ChangeLog  How-to-make-update  README  language_issues.de  language_issues.en  language_issues.es  language_issues.fr  language_issues.it  language_issues.nl  language_issues.pl  language_issues.ru  language_issues.tr  language_issues.tw  language_issues.zh  language_missings  make.sh-usage  packages-list.txt  packages-to-remove-from-ftp  updated-sources.txt_old
langs/: list
lfs/: 3c5x9setup  3cp4218  7zip  Archive-Tar  Archive-Zip  BerkeleyDB  Canary-Stability  Compress-Zlib  Config  Convert-TNEF  Convert-UUlib  Crypt-PasswdMD5  Digest  Digest-HMAC  Digest-SHA1  GD  GD-Graph  GD-TextUtil  GeoIP  HTML-Parser  HTML-Tagset  HTML-Template  IO-Socket-SSL  IO-Stringy  Locale-Country  MIME-Tools  MP3-Info  MP3-Tag  Mail-Tools  Net-DNS  Net-IPv4Addr  Net-Server  Net-Telnet  Net_SSLeay  Text-Tabs+Wrap  URI  Unix-Syslog  XML-Parser  aboot  abseil-cpp  (+1080 more)
src/: ROOTFILES.alpha  ROOTFILES.i386  stripper
src/installer/: Makefile  Makefile.am  configure.ac  downloadsource.sh  execute-postinstall.sh  hw.c  hw.h  install-bootloader  install.h  main.c  start-networking.sh  unattended.c
src/installer/.tx/: config
src/installer/dracut-module/: fake-root.sh  module-setup.sh  run-installer.sh
src/installer/po/: LINGUAS  ar.po  ca.po  cs_CZ.po  da.po  de.po  el_GR.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  ja_JP.po  jv.po  km_KH.po  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ro_RO.po  ru.po  ru_RU.po  rw.po  sk.po  sq.po  sr.po  su.po  sv.po  th.po  tk.po  tr.po  tw.po  uk.po  uz@Latn.po  vi.po  (+3 more)
src/libsmooth/: Makefile  Makefile.am  configure.ac  libsmooth.h  libsmooth.pc.in  main.c  varval.c
src/setup/: Makefile  Makefile.am  configure.ac  dhcp.c  domainname.c  hostname.c  keymap.c  main.c  misc.c  netstuff.c  networking.c  passwords.c  probenic.sh  run-setup  setup.h  timezone.c
src/setup/.tx/: config
src/setup/po/: LINGUAS  Makevars  POTFILES.in  ar.po  ca.po  cs_CZ.po  da.po  de.po  el_GR.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  ja_JP.po  jv.po  km_KH.po  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ro_RO.po  ru.po  ru_RU.po  rw.po  sk.po  sq.po  sr.po  su.po  sv.po  th.po  tk.po  tr.po  tw.po  uk.po  (+5 more)
src/setup/sudo/: setup
tests/: lib.sh
tmp/: nic.c
tools/: check_langs.sh  check_manualpages.pl  check_strings.pl  checknewlog.pl  checkrootfiles  checkwronginitlinks  cvs2cl.pl  cvs2sql.pl  download-rust-crate  execute.sh  fetchlangs.pl  find-dependencies  find-linux-firmware-changes  find-missing-libs.sh  finder.sh  langdiff.pl  make-functions  make_pkg_list.py  perfTest.sh  sendEmail  sort_strings.pl  version-check.sh
(+8363 files in other folders)
